feat: harden telemetry quality gates